Fix overflow from mod custom indicator

--- a/resources/css/bem/mod.less
+++ b/resources/css/bem/mod.less
@@ -188,8 +188,9 @@
     position: absolute;
     left: 0;
     top: calc((1em - var(--icon-width)) / 2);
+    height: calc(var(--icon-width) / 2);
     width: var(--icon-width);
-    aspect-ratio: 1;
+    display: grid;
     pointer-events: none;
   }
 
